; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/mca/extr_mca-legacy.c_mca_write_pos.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/mca/extr_mca-legacy.c_mca_write_pos.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mca_device = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @mca_write_pos(i32 %0, i32 %1, i8 zeroext %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i8, align 1
  %7 = alloca %struct.mca_device*, align 8
  store i32 %0, i32* %4, align 4
  store i32 %1, i32* %5, align 4
  store i8 %2, i8* %6, align 1
  %8 = load i32, i32* %4, align 4
  %9 = call %struct.mca_device* @mca_find_device_by_slot(i32 %8)
  store %struct.mca_device* %9, %struct.mca_device** %7, align 8
  %10 = load %struct.mca_device*, %struct.mca_device** %7, align 8
  %11 = icmp ne %struct.mca_device* %10, null
  br i1 %11, label %13, label %12

12:                                               ; preds = %3
  br label %18

13:                                               ; preds = %3
  %14 = load %struct.mca_device*, %struct.mca_device** %7, align 8
  %15 = load i32, i32* %5, align 4
  %16 = load i8, i8* %6, align 1
  %17 = call i32 @mca_device_write_pos(%struct.mca_device* %14, i32 %15, i8 zeroext %16)
  br label %18

18:                                               ; preds = %13, %12
  ret void
}

declare dso_local %struct.mca_device* @mca_find_device_by_slot(i32) #1

declare dso_local i32 @mca_device_write_pos(%struct.mca_device*, i32, i8 zeroext) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
